--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -3,64 +3,253 @@
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
 }
 body {
-	line-height: 1;
+  line-height: 1;
 }
-ol, ul {
-	list-style: none;
+ol,
+ul {
+  list-style: none;
 }
-blockquote, q {
-	quotes: none;
+blockquote,
+q {
+  quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
 }
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
 /* Set every element's box-sizing to border-box */
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
-html, body {
-    height: 100%;
-    font-family: 'Titillium Web', sans-serif;
+html,
+body {
+  height: 100%;
+  font-family: "Titillium Web", sans-serif;
 }
 
-h1, h2, h3, h4, h5 {
-    font-family: 'Bangers', cursive;
-    letter-spacing: 1px;
-    margin-bottom: 15px;
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: "Bangers", cursive;
+  letter-spacing: 1px;
+  margin-bottom: 15px;
 }
 
 /* Your code starts here! */
+/* General styles at the top */
+h1 {
+  font-size: 85px;
+}
+
+button {
+  border: 1px solid black;
+  padding: 8px 30px;
+  font-size: 17px;
+  color: rgba(0, 0, 0, 0.68);
+}
+img {
+  width: 100%;
+}
+
+hr {
+  margin: 50px 0;
+  border: 1px solid rgba(0, 0, 0, 0.358);
+}
+p {
+  line-height: 1.25;
+}
+/* page styles in the middle */
+.container {
+  width: 960px;
+  margin: 0 auto;
+}
+
+/* specific styles at the bottom */
+
+header {
+  height: 90px;
+  position: relative;
+}
+header img,
+header nav {
+  display: inline-block;
+}
+header img {
+  position: relative;
+  top: 12px;
+  margin-left: 40px;
+  width: 200px;
+}
+header nav a {
+  text-decoration: none;
+  color: gray;
+  text-align: left;
+  margin: 0 20px;
+  padding: 12px;
+}
+/* Banner */
+.banner {
+  text-align: center;
+}
+.banner div {
+  display: inline-block;
+  margin: 0 auto;
+}
+.banner div:first-child {
+  width: 320px;
+  margin-right: 120px;
+}
+.banner div:nth-of-type(2) {
+  width: 350px;
+  height: 350px;
+}
+/* Main */
+
+main {
+  text-align: center;
+}
+.middle-img {
+  margin: 45px 0;
+}
+
+/* two section content */
+.fa_wrapper div {
+  display: inline-block;
+  width: 45%;
+}
+.fa_wrapper div:first-child {
+  margin-right: 60px;
+}
+/* three section content */
+
+.spv_wrapper div {
+  display: inline-block;
+  width: 30%;
+}
+.spv_wrapper div {
+  margin-right: 26px;
+}
+
+/* Footer  */
+footer {
+  height: 200px;
+  text-align: center;
+  padding-top: 100px;
+}
+
+/* Rules :
+  Use any CSS properties you want for general styling but for layout, you can only use the box model (content, padding, margin, border) and display:inline-block. */
